--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-## No environment variables are required for this project.
+# Frontend (Vite)
+VITE_FIREBASE_API_KEY=replace-me
+VITE_FIREBASE_AUTH_DOMAIN=replace-me.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=replace-me
+VITE_FIREBASE_APP_ID=replace-me
+VITE_FIREBASE_MESSAGING_SENDER_ID=replace-me
