--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,7 @@
 PORT=5000
 MONGODB_URI=your-mongodb-connection-string
 MONGODB_DB_NAME=eventsHub
+ADMIN_EMAILS=deepanshusagore@gmail.com
 
 FIREBASE_PROJECT_ID=your-project-id
 FIREBASE_CLIENT_EMAIL=service-account@your-project-id.iam.gserviceaccount.com
